--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "league/oauth2-client": "2.6.*",
-        "firebase/php-jwt": "5.2.*"
+        "league/oauth2-client": "2.6.*"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
